@@ -59,7 +59,7 @@ $Date$
 <!ENTITY lfs-vim-version              "7.3">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20120502">
+<!ENTITY blfs-bootscripts-version     "20120506">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.&lfs-domainname;/blfs/wiki">
@@ -574,7 +574,7 @@ $Date$
 <!-- <!ENTITY xinetd-version               "2.3.14"> -->
 
 <!-- Chapter 21 -->
-<!ENTITY exim-version                 "4.67">
+<!ENTITY exim-version                 "4.77">
 <!ENTITY postfix-version              "2.9.1">
 <!ENTITY qpopper-version              "4.1.0">
 <!ENTITY sendmail-version             "8.14.4">
