@@ -4,13 +4,11 @@
   <!ENTITY % general-entities SYSTEM "../../general.ent">
   %general-entities;
 
-  <!ENTITY exim-download-http      "http://www.exim.org/ftp/exim4/old/exim-&exim-version;.tar.bz2">
-  <!ENTITY exim-download-ftp       "ftp://ftp.exim.org/pub/exim/exim4/old/exim-&exim-version;.tar.bz2">
-  <!-- <!ENTITY exim-download-http      "&sources-anduin-http;/e/exim-&exim-version;.tar.bz2"> -->
-  <!-- <!ENTITY exim-download-ftp       " "> -->
-  <!ENTITY exim-md5sum             "9ee83186d9ac99e5ff297112aa6fddf0">
-  <!ENTITY exim-size               "1.6 MB">
-  <!ENTITY exim-buildsize          "15 MB">
+  <!ENTITY exim-download-http      "http://www.exim.org/ftp/exim4/exim-&exim-version;.tar.bz2">
+  <!ENTITY exim-download-ftp       "ftp://ftp.exim.org/pub/exim/exim4/exim-&exim-version;.tar.bz2">
+  <!ENTITY exim-md5sum             "5d746275f2cc85845567f9d5eb84a57a">
+  <!ENTITY exim-size               "1.5 MB">
+  <!ENTITY exim-buildsize          "16 MB">
   <!ENTITY exim-time               "0.2 SBU">
 ]>
 
@@ -42,6 +40,8 @@
     Transport Agent written by the University of Cambridge, released
     under the GNU Public License.</para>
 
+    &lfs70_checked;
+
     <bridgehead renderas="sect3">Package Information</bridgehead>
     <itemizedlist spacing="compact">
       <listitem>
@@ -66,10 +66,6 @@
 
     <bridgehead renderas="sect3">Additional Downloads</bridgehead>
     <itemizedlist spacing="compact">
-      <!-- <listitem>
-        <para>Required patch for Berkeley DB: <ulink
-        url="&patch-root;/exim-&exim-version;-db43-1.patch"/></para>
-      </listitem> -->
       <listitem>
         <para>Additional formats of the documentation (text-based docs are
         shipped with the sources) can be downloaded by following the links
@@ -80,21 +76,24 @@
     <bridgehead renderas="sect3">Exim Dependencies</bridgehead>
 
     <bridgehead renderas="sect4">Required</bridgehead>
-    <para role="required"><xref linkend="db"/> or
-    <!-- <xref linkend="gdbm"/> -->
-    GDBM (GDBM built in LFS) or
-    <ulink url="http://sourceforge.net/projects/tdb">TDB</ulink></para>
+    <para role="required">
+      <xref linkend="db"/> or
+      GDBM (GDBM built in LFS) or
+      <ulink url="http://sourceforge.net/projects/tdb">TDB</ulink>
+    </para>
 
     <bridgehead renderas="sect4">Optional</bridgehead>
-    <para role="optional"><xref linkend="x-window-system"/>,
-    <xref linkend="openldap"/>,
-    <xref linkend="openssl"/> or <xref linkend="gnutls"/>,
-    <xref linkend="cyrus-sasl"/>,
-    <xref linkend="mysql"/>,
-    <xref linkend="postgresql"/>,
-    <xref linkend="sqlite"/>,
-    <xref linkend="tcpwrappers"/>, and
-    <xref linkend="linux-pam"/></para>
+    <para role="optional">
+      <xref linkend="x-window-system"/>,
+      <xref linkend="openldap"/>,
+      <xref linkend="openssl"/> or <xref linkend="gnutls"/>,
+      <xref linkend="cyrus-sasl"/>,
+      <xref linkend="mysql"/>,
+      <xref linkend="postgresql"/>,
+      <xref linkend="sqlite"/>,
+      <xref linkend="tcpwrappers"/>, and
+      <xref linkend="linux-pam"/>
+    </para>
 
     <para condition="html" role="usernotes">User Notes:
     <ulink url="&blfs-wiki;/exim"/></para>
