@@ -1,3 +1,6 @@
+2012-05-06 Bruce Dubbs <ken@linuxfromscratch.org>
+   * Update exim script to be compatible with LFS 7.0+.
+
 2012-05-02 Ken Moffat <ken@linuxfromscratch.org>
    * Use /usr/libexec in postfix script to match the book.
 
